--- a/src/Contracts.ChainEvaluationHandler.Console/Contracts.ChainEvaluationHandler.Console.csproj
+++ b/src/Contracts.ChainEvaluationHandler.Console/Contracts.ChainEvaluationHandler.Console.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\Contracts.ChainEvaluationHandler\Contracts.ChainEvaluationHandler.csproj" />
   </ItemGroup>
 
 </Project>
